overflow bug

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -62,7 +62,6 @@ html, body
 
 body
   background: #fff
-  overflow-x: hidden
 
 
 h1, h3, h4
@@ -1126,6 +1125,7 @@ section.testimonial-content
     @media screen and (max-width: 650px) 
       padding: 8%
       border-right: 0px
+      margin-right: 0
 
     p, span.club
       font-family: 'DINRegular', Helvetica, Arial, sans-serif
@@ -1250,6 +1250,8 @@ footer
   padding: 4rem 2rem 4rem
   background: #272A2D
   position: relative
+  max-width: 100%
+  overflow: hidden
 
   img.footer-logo
     margin-bottom: 40px
